--- a/newhomepage/newhomepage/style/import.css
+++ b/newhomepage/newhomepage/style/import.css
@@ -2588,34 +2588,7 @@ section.bc_section {
 
 .sc_regulatory_compliance .bc_wrapper {
   border-bottom: 1px solid #dadada;
-  padding: 90px 0 70px 0;
-  /*.bc_box_details{
-  	max-width: 500px; 
-  	.bc_cmp_logo{
-  		margin: 0 0 40px 0;
-  		a{
-  			margin-right: 15px;
-  		}
-  	}
-  	h3{
-  		font-size: 20px;
-  		color: #113880;
-  		margin: 0 0 15px 0;
-  		@media (min-width: 992px){
-  			font-size: 23px;
-  			margin: 0 0 35px 0;
-  		}
-  		@media (min-width: 1200px){
-  			font-size: 40px;
-  		}
-  	}
-  	p{
-  		font-size: 16px;
-  		line-height: 24px;
-  		color: #687685;
-  		margin: 0 0 35px 0;
-  	}
-  }*/ }
+  padding: 90px 0 70px 0; }
   .sc_regulatory_compliance .bc_wrapper .bc_box_details {
     max-width: 977px;
     margin-left: auto;
@@ -2883,31 +2856,12 @@ section.bc_section {
         line-height: 24px;
         color: #687685; }
 
-/*.sc_fees{
-	background: linear-gradient(60deg, #11377f 0%, #1a60a7 100%);
-	padding: 60px 0;
-	@media (min-width: 1200px) {
-		min-height: 610px;
-		padding: 200px 0 0 0;
-		background-image: url(../../img/bg/fees_bg.png);
-	}
-	.bc_small_btn{
-		padding: 17px 30px;
-		font-size: 14px;
-		margin: 0 auto;
-	}
-}*/
 .row_pricing {
   max-width: 1230px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 2%;
-  /*@media only screen and (max-width: 500px) {
-  	grid-template-columns: 1fr;
-  	max-width: 300px;
-  	grid-row-gap: 1%;
-  }*/ }
+  grid-column-gap: 2%; }
   @media only screen and (max-width: 1262px) {
     .row_pricing {
       max-width: 767px; } }
@@ -2993,52 +2947,6 @@ section.bc_section {
       .title_pricing_box h4 {
         font-size: 11px; } }
 
-/*
-.border_style{
-	border-top:1px solid red;
-	
-}
-
-.collapsible {
-	background-color: #fdfdfd;
-	color: #687685;
-	cursor: pointer;
-	padding: 15px;
-	width: 100%;
-	border:none;
-	border-left: none;
-	border-right: none;
-	text-align: left;
-	outline: none;
-	
-	font-size: 15px;
-  }
-  
-  .active, .collapsible:hover {
-	background-color: #555;
-  }
-  
-  .collapsible:after {
-	content: '\002B';
-	color: #687685;
-
-	font-weight: bold;
-	float: right;
-	margin-left: 5px;
-  }
-  
-  .active:after {
-	content: "\2212";
-  }
-  
-  .content {
-	padding: 0 18px;
-	max-height: 0;
-	overflow: hidden;
-	transition: max-height 0.2s ease-out;
-	background-color: #f1f1f1;
-  }
-*/
 .accordion a {
   position: relative;
   display: -webkit-box;
@@ -3183,7 +3091,9 @@ section.bc_section {
 .header_additional_2, .header_additional_3, .header_additional_4 {
   overflow: auto; }
   .header_additional_2 h2, .header_additional_3 h2, .header_additional_4 h2 {
-    margin-top: 28px; }
+    margin-top: 28px;
+    border-bottom: 1px solid #e1e1e1;
+    padding-bottom: 19px; }
 
 .header_additional_2 h3:nth-child(2), .header_additional_3 h3:nth-child(2), .header_additional_4 h3:nth-child(2) {
   margin-top: 24px;
@@ -3203,7 +3113,7 @@ section.bc_section {
 .section_2_additional_content {
   height: 90px;
   overflow: auto;
-  background: #2c579f;
+  background: #86a1ce;
   text-align: center; }
   .section_2_additional_content h3 {
     margin-top: 35px; }
@@ -3258,16 +3168,19 @@ section.bc_section {
 
 .text_additional_mobile_1 {
   font-family: 'latoBold';
-  font-size: 18px;
+  font-size: 15px;
   text-align: center; }
 
 .text_additional_mobile_2 {
   font-family: 'latoBold';
-  font-size: 19px;
+  font-size: 15px;
   text-align: center; }
 
 .size_24 {
-  font-size: 24px; }
+  font-size: 21px; }
+
+.size_22 {
+  font-size: 17px; }
 
 .text_additional_mobile_color_1 {
   color: #687685; }
@@ -3292,7 +3205,8 @@ section.bc_section {
 
 .hader_mobile_auditional {
   padding-top: 20px;
-  padding-bottom: 15px; }
+  padding-bottom: 15px;
+  text-transform: uppercase; }
 
 .section_mobile_additional h3 {
   padding-top: 20px;
@@ -3303,6 +3217,14 @@ section.bc_section {
 .section_1_mobile_additional p:nth-child(3) {
   padding-top: 16px;
   padding-bottom: 18px; }
+
+#text_additional_mobile_1_id_1, #text_additional_mobile_1_id_2 {
+  padding-top: 40px;
+  padding-bottom: 31px; }
+  @media (max-width: 767px) {
+    #text_additional_mobile_1_id_1, #text_additional_mobile_1_id_2 {
+      padding-top: 18px;
+      padding-bottom: 18px; } }
 
 .section_2_mobile_additional p {
   padding-top: 20px;
@@ -3487,6 +3409,18 @@ section.bc_section {
         top: 25px; }
         .sc_our_network .bc_slider_nav .slick-prev:before {
           font-size: 20px; } }
+    @media (max-width: 767px) {
+      .sc_our_network .bc_slider_nav .slick-prev {
+        top: -315px; } }
+    @media (max-width: 425px) {
+      .sc_our_network .bc_slider_nav .slick-prev {
+        top: -338px; } }
+    @media (max-width: 360px) {
+      .sc_our_network .bc_slider_nav .slick-prev {
+        top: -371px; } }
+    @media (max-width: 322px) {
+      .sc_our_network .bc_slider_nav .slick-prev {
+        top: -394px; } }
   .sc_our_network .bc_slider_nav .slick-next {
     font-size: 0;
     border: none;
@@ -3513,6 +3447,18 @@ section.bc_section {
         top: 25px; }
         .sc_our_network .bc_slider_nav .slick-next:before {
           font-size: 20px; } }
+    @media (max-width: 767px) {
+      .sc_our_network .bc_slider_nav .slick-next {
+        top: -315px; } }
+    @media (max-width: 425px) {
+      .sc_our_network .bc_slider_nav .slick-next {
+        top: -338px; } }
+    @media (max-width: 360px) {
+      .sc_our_network .bc_slider_nav .slick-next {
+        top: -371px; } }
+    @media (max-width: 322px) {
+      .sc_our_network .bc_slider_nav .slick-next {
+        top: -394px; } }
 
 .sc_blog {
   padding: 82px 0 60px 0; }
@@ -3589,6 +3535,10 @@ section.bc_section {
         .sc_blog .bc_our_blog .bc_post_item .bc_post_details .bc_read_more:hover:after {
           width: 45px; }
 
+@media (max-width: 767px) {
+  .sc_our_network .bc_slider_nav .slick-list {
+    display: none; } }
+
 .sc_faq {
   padding: 60px 0;
   background: linear-gradient(60deg, #11377f 0%, #1a60a7 100%); }
@@ -3614,6 +3564,9 @@ section.bc_section {
         text-transform: uppercase;
         color: #b7cef2;
         font-weight: 700; }
+        @media (max-width: 767px) {
+          .sc_faq .bc_tabs .bc_tab_item .bc_tab_header h4 {
+            font-size: 13px; } }
       .sc_faq .bc_tabs .bc_tab_item .bc_tab_header .bc_toggle_tab {
         position: absolute;
         top: 0;
@@ -3625,6 +3578,11 @@ section.bc_section {
           font-size: 22px;
           transition: 0.25s ease-in-out;
           display: block; }
+          @media (max-width: 767px) {
+            .sc_faq .bc_tabs .bc_tab_item .bc_tab_header .bc_toggle_tab i {
+              font-size: 15px;
+              position: relative;
+              right: -41px; } }
     .sc_faq .bc_tabs .bc_tab_item .bc_tab_details {
       display: none; }
       .sc_faq .bc_tabs .bc_tab_item .bc_tab_details p {
@@ -3767,12 +3725,5 @@ section.bc_section {
     position: absolute; }
     .bc_modal_video_play .bc_wrapper iframe {
       max-width: calc(100% - 30px); }
-
-/*@media screen and (max-width: 767px) {
-  .wow{
-        animation-name: none !important;
-        visibility: visible !important;
-    }
-}*/
 
 /*# sourceMappingURL=import.css.map */
