--- a/newhomepage/newhomepage/style/sass/_sections.scss
+++ b/newhomepage/newhomepage/style/sass/_sections.scss
@@ -1121,7 +1121,7 @@ section{
 		max-width: 300px;
 		grid-row-gap: 1%;*/
 		display: block;
-		width: 300px;
+		max-width: 300px;
 		.pricing_box_2{
 			margin-top: 30px;
 			margin-bottom: 30px;
