--- a/newhomepage/newhomepage/style/sass/_sections.scss
+++ b/newhomepage/newhomepage/style/sass/_sections.scss
@@ -313,7 +313,11 @@ section{
 				padding: 30px 10px;
 			    border-radius: 4px;
 			    background: linear-gradient(90deg, #1d61b3 0%, #0453b3 100%);
-			    display: flex;
+				display: flex;
+				display: -webkit-box;   /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+				display: -ms-flexbox;  /* TWEENER - IE 10 */
+				display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+				display: flex;   
 			    justify-content: center;
 			    max-width: 510px;
 			    margin: 0 auto;
@@ -1144,7 +1148,7 @@ section{
 	background-color: #15478f;
 	padding-bottom: 150px;
 
-	@media only screen and (max-width: 587px) {
+	@media only screen and (max-width: 767px) {
 		padding-bottom: 70px;
 	}
 
@@ -1527,7 +1531,8 @@ section{
 	}
 
 	@media only screen and (max-width: 767px) {
-  		margin-top: 140px;
+		  margin-top: 70px;
+		
 	}
 
 	@media only screen and (max-width: 587px) {
