--- a/newhomepage/newhomepage/style/sass/_sections.scss
+++ b/newhomepage/newhomepage/style/sass/_sections.scss
@@ -324,6 +324,11 @@ section{
 			    @media (min-width: 992px){
 					padding: 30px 0;
 				}
+
+				@media (max-width: 500px){
+					display: grid;
+					grid-template-columns: auto auto ;
+				}
 				.bc_input_text{
 					width: 250px;
 					padding: 0 20px;
@@ -339,9 +344,15 @@ section{
 					@media (min-width: 992px){
 						padding: 0 40px;
 					}
+					@media (max-width: 500px){
+						width: 200px;
+					}
 				}
 				.bc_submit{
 					width: 200px;
+					@media (max-width: 500px){
+						width: 71px;
+					}
 					text-align: center;
 					height: 52px;
 					border-top-right-radius: 100px;
